--- a/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
@@ -16,7 +16,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" [routerLink]="['ingreso-comunicacion']" routerLinkActive="active">Ingreso de Comunicacion</a>
-          <a class="dropdown-item" href="#/" routerLinkActive="active">Salida de Comunicacion</a>
+          <a class="dropdown-item" [routerLink]="['ingreso-comunicacion-tipo']" routerLinkActive="active">Salida de Comunicacion</a>
           <hr>
           <a class="dropdown-item" href="#/" routerLinkActive="active">Respuesta de Comunicacion</a>
         </div>
