--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
@@ -12,10 +12,10 @@
   <div class="row">
     <div class="col-md-1-12">
     <h4>Buscar por:
-    <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="temaComunicacion" >Tema de Oficio |
-    <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="codCorrespondenciaEnc"  >No. Oficio Interno |
-    <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="codReferenciaSreci" >No. Oficio Ingresado |
-    <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="descCorrespondenciaEnc" >Descripción Oficio
+    <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="temaComunicacion" >Tema |
+    <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="codCorrespondenciaEnc"  >No. Interno |
+    <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="codReferenciaSreci" >No. Ingresado |
+    <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="descCorrespondenciaEnc" >Descripción
     </h4>
       <input class="form-control" type="text" name="search"  [(ngModel)]="search" placeholder="Buscar" >
     </div>
@@ -29,10 +29,10 @@
         <thead >
             <tr>
               <th>Estado</th>
-              <th>No. Oficio Interno</th>
-              <th>No. Oficio Ingresado</th>
+              <th>No.Interno</th>
+              <th>No.Ingresado</th>
               <th>Institución</th>
-              <th>Tema Oficio</th>
+              <th>Tema</th>
               <th>Fecha Ingreso</th>
               <th>Fecha Entrega</th>
               <th>Accion</th>
@@ -41,10 +41,10 @@
         <tfoot>
             <tr>
               <th>Estado</th>
-              <th>No. Oficio Interno</th>
-              <th>No. Oficio Ingresado</th>
+              <th>No.Interno</th>
+              <th>No.Ingresado</th>
               <th>Institución</th>
-              <th>Tema Oficio</th>
+              <th>Tema</th>
               <th>Fecha Ingreso</th>
               <th>Fecha Entrega</th>
               <th>Accion</th>
@@ -93,7 +93,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true" > <i class="material-icons">close</i> </button>
-            <h4 class="modal-title" id="myModalLabel">Oficio No. {{ codOficioIntModal }} | Referencia ( {{ codOficioRefModal }} )</h4>
+            <h4 class="modal-title" id="myModalLabel">Comunicacion No. {{ codOficioIntModal }} | Referencia ( {{ codOficioRefModal }} )</h4>
             <!-- Loader de Carga de los Datos -->
             <div id="loader-2" *ngIf="loading_table == 'show'" >
               <img src="assets/images/loading_2.gif" alt="Cargando Tareas" style="width:25px;">
@@ -104,7 +104,7 @@
             <!-- Formulario del Oficio Asignado -->
               <form #finalizarOficioForm="ngForm" (ngSubmit)="onSubmit(finalizarOficioAsignado, 2)" name="finalizarOficioForm" role="form">
                 <!-- fila 1 del Formulario -->
-                <h4>Creacion de Oficio de Respuesta | {{ idCorrepEncModal }}</h4>
+                <h4>Creacion de Comunicacion de Respuesta | {{ idCorrepEncModal }}</h4>
                 <hr>
                 <div class="row">
                   <div class="col-md-6 mb-3">
@@ -121,7 +121,7 @@
                     <!-- <label for="validationDefault01">Descripción del Oficio</label> -->
                     <textarea #descripcionOficio="ngModel" type="text" name="descripcionOficio" id="descripcionOficio"
                             ngControl="descripcionOficio" [(ngModel)]="finalizarOficios.descripcionOficio" required maxlength="1400" minlength="15"
-                            class="form-control" id="exampleFormControlTextarea1" placeholder="Descripción del Oficio" rows="3">
+                            class="form-control" id="exampleFormControlTextarea1" placeholder="Descripción de la Comunicacion" rows="3">
                     </textarea>
                     <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.required" >La Descripcion es obligatoria</small>
                     <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.minlength" >Se nesesita por lo menos {{ descripcionOficio.errors.minlength.requiredLength }} caracteres</small>
@@ -165,7 +165,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true" > <i class="material-icons">close</i> </button>
-        <h4 class="modal-title" id="myModalLabel">Oficio No. {{ codOficioIntModal }} | Referencia ( {{ codOficioRefModal }} )</h4>
+        <h4 class="modal-title" id="myModalLabel">Comunicacion No. {{ codOficioIntModal }} | Referencia ( {{ codOficioRefModal }} )</h4>
         <!-- Loader de Carga de los Datos -->
         <div id="loader-2" *ngIf="loading_table == 'show'" >
           <img src="assets/images/loading_2.gif" alt="Cargando Tareas" style="width:25px;">
@@ -180,7 +180,7 @@
             <hr>
             <div class="row">
               <div class="col-md-6 mb-3">
-                <label for="validationDefault01">Tema de Oficio</label>
+                <label for="validationDefault01">Funcionario Asignado</label>
                 <input type="text" class="form-control" id="validationDefault01" placeholder="First name"
                        value="{{ nombre1FuncModal }} {{ nombre2FuncModal }} {{ apellido1FuncModal }} {{ apellido2FuncModal }} " disabled>
               </div>
@@ -193,7 +193,7 @@
                 <!-- <label for="validationDefault01">Descripción del Oficio</label> -->
                 <textarea #descripcionOficio="ngModel" type="text" name="descripcionOficio" id="descripcionOficio"
                         ngControl="descripcionOficio" [(ngModel)]="finalizarOficios.descripcionOficio" required maxlength="1400" minlength="15"
-                        class="form-control" id="exampleFormControlTextarea1" placeholder="Descripción del Oficio" rows="3">
+                        class="form-control" id="exampleFormControlTextarea1" placeholder="Descripción de la Comunicacion" rows="3">
                 </textarea>
                 <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.required" >La Descripcion es obligatoria</small>
                 <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.minlength" >Se nesesita por lo menos {{ descripcionOficio.errors.minlength.requiredLength }} caracteres</small>
@@ -205,7 +205,7 @@
                 <!-- <label for="validationDefault02">Actividad realizada</label> -->
                 <input type="text" class="form-control" [(ngModel)]="finalizarOficios.actividadOficio" name="actividadOficio" id="actividadOficio"
                     placeholder="Actividad realizada" required value="">
-                    
+
               </div>
             </div>
 
@@ -213,7 +213,7 @@
               <div class="col-md-4 mb-3">
                 <!-- <label for="validationDefault02">Actividad realizada</label> -->
                 <input type="text" class="form-control" [(ngModel)]="finalizarOficios.codOficioRespuesta" name="codOficioRespuesta" id="codOficioRespuesta"
-                    placeholder="Oficio de Respuesta" required value="{{ idCorrepEncModal }}" disabled>
+                    placeholder="Comunicacion de Respuesta" required value="{{ idCorrepEncModal }}" disabled>
               </div>
             </div>
             <!-- <button class="btn btn-primary" type="submit">Submit form</button> -->
